# aerocam_handler

./: README.md  index.html  pyproject.toml
docs/aerocam_handler/: image_funcs.html
html/aerocam_handler/: image_funcs.md  index.html  index.md  reader.html  reader.md
src/aerocam_handler/: image_funcs.py  reader.py
